--- a/연습문제5.html
+++ b/연습문제5.html
@@ -6,12 +6,81 @@
     <title>Document</title>
     <style>
       legend {
+        font-weight: bold;
+        font-size: large;
+      }
+      body{
+        margin: 0;
+      }
+      .container{
+        width: 800px;
+        margin: 0 auto;
+      }
+      .detail > label{
+        display: inline-block;
+        width: 100px;
+      }
+      .detail > input{
+        width: 300px;
+        height: 24px;
+        margin-bottom: 10px;
+      }
+      input[type="date"]{
+        width: 150px;
+      }
+      span{
+        font-size: 80%;
+      }
+      button{
+        width: 150px;
+        height: 40px;
+        margin-left: 6px;
+        margin-right: 6px;
+      }
+      .btn{
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
       }
     </style>
   </head>
   <body>
+    <div class="container">
+      <h1>아이패드 주문하기</h1>
+      <form action="#">
     <fieldset>
       <legend>배송 정보</legend>
+      <div class ="detail">
+        <label for="product">주문 상품</label>
+        <input type="text" id="product" value="아이패드 12.9인치" readonly>
+      </div>
+      <div class="detail">
+        <label for="name">이름</label>
+        <input type="text" id="name" autofocus>
+      </div>
+      <div class ="detail">
+        <label for="adress">배송 주소</label>
+        <input type="text" id="adress" required>
+      </div>
+      <div class ="detail">
+        <label for="email">이메일</label>
+        <input type="text" id="email">
+      </div>
+      <div class="detail">
+        <label for="phone">연락처</label>
+        <input type="tel" id="phone" placeholder="하이픈을 빼고 입력">
+      </div>
+      <div class="detail">
+        <label for="date">배송일 지정</label>
+        <input type="date" id="date">
+        <span>(주문일로부터 최소 3일 이후)</span>
+      </div>
     </fieldset>
+    <div class="btn">
+      <button type="submit">주문하기</button>
+      <button type="submit">취소하기</button>
+    </div>
+    </form>
+    </div>
   </body>
 </html>
